# OOP_FIT

./: .gitignore  CMakeLists.txt  hello.txt  help  input.txt  output.csv  readNcount.h  writer.cpp  writer.h
finalGameIHope/: .gitignore  finalGameIHope.pro  main.cpp  res.qrc
finalGameIHope/include/: gamecontroller.h  gameview.h  soundcontroller.h  universalfabric.h
finalGameIHope/include/entities/: bullet.h  direction.h  entitytype.h  hitable.h
finalGameIHope/include/interface/: button.h  gamescene.h  losescene.h  mainwindowscene.h  platform.h  settingsscene.h  volumeslider.h  winscene.h
finalGameIHope/src/: gamecontroller.cpp  gameview.cpp  soundcontroller.cpp
finalGameIHope/src/entities/: bullet.cpp
finalGameIHope/src/interface/: button.cpp  gamescene.cpp  losescene.cpp  mainwindowscene.cpp  platform.cpp  settingsscene.cpp  volumeslider.cpp  winscene.cpp
lab0b/: .gitignore  CMakeLists.txt  app.cpp  app.h  counter.cpp  counter.h  input.txt  main.cpp  output.csv  readNcount.cpp  reader.cpp  reader.h  writer.cpp  writer.h
lab1(bitArr)/: .gitignore  Doxyfile  a-bitArray.gcda  a-bitArray.gcno  a-lab1_tests.gcda  a-lab1_tests.gcno  a.out  bitArray.cpp  lab1_tests.cpp
lab1(bitArr)/doxygen/html/: annotated.html  bitArray_8h_source.html  classBarEnvironment-members.html  classBarEnvironment.html  classBase-members.html  classBase.html  classBiggestIntConvertible-members.html  (+1084 more)
lab1(bitArrBigEndian)/: CMakeLists.txt  a.out  bitArray.cpp  bitArray.h  lab1_tests.cpp
lab1(bitArrLittleEndian)/: bitArray.cpp  bitArray.h  coverage.info
lab4/: lab4.cpp  main
(+127 files in other folders)
